--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-admin-honeypot==1.1.0
 django-admin-thumbnails==0.2.6
 django-session-timeout==0.1.0
 docopt==0.6.2
+gunicorn==20.1.0
 idna==3.4
 Pillow==9.3.0
 pipreqs==0.4.11
