--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-asgiref==3.2.10
+asgiref==3.6.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
-Django==3.1
+dj-database-url==1.3.0
+Django==3.2
 django-admin-honeypot==1.1.0
 django-admin-thumbnails==0.2.6
 django-session-timeout==0.1.0
@@ -10,10 +11,13 @@ gunicorn==20.1.0
 idna==3.4
 Pillow==9.3.0
 pipreqs==0.4.11
+psycopg2==2.9.6
 python-decouple==3.8
 pytz==2022.6
 requests==2.28.2
 six==1.16.0
 sqlparse==0.4.3
+typing_extensions==4.5.0
+tzdata==2023.3
 urllib3==1.26.14
 yarg==0.1.9
