--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ gunicorn==20.1.0
 idna==3.4
 Pillow==9.3.0
 pipreqs==0.4.11
-psycopg2==2.9.6
+psycopg2-binary==2.9.6
 python-decouple==3.8
 pytz==2022.6
 requests==2.28.2
