--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ dj-database-url==1.3.0
 Django==3.2
 django-admin-honeypot==1.1.0
 django-admin-thumbnails==0.2.6
+django-environ==0.10.0
 django-session-timeout==0.1.0
 docopt==0.6.2
 gunicorn==20.1.0
 idna==3.4
 Pillow==9.3.0
 pipreqs==0.4.11
+psycopg2==2.9.6
 psycopg2-binary==2.9.6
 python-decouple==3.8
 pytz==2022.6
